--- a/src/main/resources/templates/mobile/warehousing/warehousing.html
+++ b/src/main/resources/templates/mobile/warehousing/warehousing.html
@@ -9,7 +9,7 @@
     
 <div class="mobile-inner" style="gap: 2.3rem;"> 
 
-    <button class="back-btn">
+    <button class="back-btn" onclick="location.href='/mobile/admin/index'">
         <i class="fa-solid fa-chevron-left"></i>
         <p class="menu-title">입고하기</p>
     </button>
