--- a/src/main/resources/static/mobile/common/css/container-map.css
+++ b/src/main/resources/static/mobile/common/css/container-map.css
@@ -1,26 +1,23 @@
 .white-frame.home-first-menu {
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    justify-items: center;
     gap: 10px;
-    width: 100%;
 }
 
 .cnt {
+    width: 50px;
+    height: 50px;
     background-color: #E3E2D9;
-    text-align: center;
-    font-weight: bold;   
-    padding: 25px;
     border: 1px solid #ddd;
-    box-sizing: border-box;    
-    width: 1rem;
-    height: 1rem;
-    aspect-ratio: 1 / 1; 
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    font-size: 1.3rem;
+    font-weight: 800;
+    line-height: 50px;
+    color: #222222;
+    aspect-ratio: 1 / 1;
     cursor: pointer;
-    
 }
 
 .menu-title {
