--- a/src/main/resources/static/mobile/login/css/login.css
+++ b/src/main/resources/static/mobile/login/css/login.css
@@ -1,3 +1,67 @@
+#login-container {
+	width: 100%;
+	margin-top: 50px;
+	padding: 0 4rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.logo-wrap {
+	margin: 10rem 0;
+	width: 23rem;
+	height: 4rem;
+}
+
+.logo-wrap img {
+	width: 100%;
+	height: 100%;
+}
+
+.sign-wrap {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	gap: .5rem;
+}
+
+.sign-wrap label {
+	font-size: 1.8rem;
+}
+
+.sign-wrap input {
+	width: 100%;
+	height: 6rem;
+	border: 1px solid #C0C0C0;
+	border-radius: 1rem;
+	padding: 1rem 1rem;
+	font-size: 1.4rem;
+}
+
+.sign-wrap:nth-child(2) {
+	margin-top: 2rem;
+}
+
+/* 아이디 비번 틀렸을 때 */
+.sign-wrap .error-message {
+	color: #E54F53;
+	font-size: 1.4rem;
+}
+
+.sign-wrap #mob-id,
+.sign-wrap #mob-pw {
+	border: 1px solid #E54F53;
+}
+
+#login-btn {
+	height: 6rem;
+	font-size: 2rem;
+	font-weight: 700;
+	margin-top: 5rem;
+}
+
 #mob-id.id.error, #mob-pw.password.error {
     border-color: red; /* 에러가 있을 때 빨간색 테두리 추가 */
 }
