--- a/src/main/resources/templates/mobile/dispatch/dispatch.html
+++ b/src/main/resources/templates/mobile/dispatch/dispatch.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/mobile/dispatch/css/dispatch.css" />
     
 <div class="mobile-inner" style="gap: 2.3rem;"> 
-    <button class="back-btn">
+    <button class="back-btn" onclick="location.href='/mobile/admin/index'">
         <i class="fa-solid fa-chevron-left"></i>
         <p class="menu-title">출고하기</p>
     </button>    
