Fix : 부서 인사팀 추가 security 수정

--- a/src/main/resources/templates/admin/managers/managerDetails.html
+++ b/src/main/resources/templates/admin/managers/managerDetails.html
@@ -49,6 +49,7 @@
 			<span class="search-list-subject value" th:switch="${manager_details.manager_dept}">
 			    <span th:case="'01'">물류팀</span>
 			    <span th:case="'02'">운영팀</span>
+			    <span th:case="'03'">인사팀</span>
 			</span>
 		</div>
 		
