--- a/src/main/resources/templates/admin/managers/managers.html
+++ b/src/main/resources/templates/admin/managers/managers.html
@@ -68,6 +68,8 @@
 					<select id="searchDept" class="select">
 						<option value="01">물류팀</option>
 						<option value="02">운영팀</option>
+						<option value="03">인사팀</option>
+						
 					</select>
 					<div class="select-arrow-down column"></div>
 				</div>
