--- a/src/main/resources/templates/admin/managers/managerReg.html
+++ b/src/main/resources/templates/admin/managers/managerReg.html
@@ -103,6 +103,8 @@
 						<option value="" disabled selected>부서 선택</option>
 						<option value="01">물류팀</option>
 	               		<option value="02">운영팀</option>
+	               		<option value="03">인사팀</option>
+	               		
 					</select>
 					<div class="select-arrow-down" id="dept"></div>
 				</div>
