Feat: 사용자 취소 및 반품 상세 페이지 쿼리 수정

--- a/src/main/resources/templates/user/mypage/customer_order/returnDetail.html
+++ b/src/main/resources/templates/user/mypage/customer_order/returnDetail.html
@@ -78,7 +78,7 @@
 		</div>
 		<div class="refund-info-area">
 			<div class="refund-price-area">
-				<span>주문금액</span>
+				<span>반품금액</span>
 				<span th:text="${#numbers.formatInteger(refund.cancellationAmount, 0, 'COMMA')} + '원'"></span>					
 			</div>
 			<div class="cancle-price-area">
