--- a/src/main/resources/templates/user/mypage/customer_order/cancleCompletion.html
+++ b/src/main/resources/templates/user/mypage/customer_order/cancleCompletion.html
@@ -31,8 +31,7 @@
 					<a th:href="'/user/products/detail?book_isbn=' + ${detail.book_isbn}"><span class="book-name" th:text="${detail.book_name}"></span></a>
 				</div>
 				<div>
-					<span class="purchase-qty" th:text="'수량: ' + ${detail.request_complete_qty} + '개'" th:if="${detail.request_status == '취소요청'}"></span>
-					<span class="purchase-qty" th:text="'수량: ' + ${detail.request_complete_qty} + '개'" th:if="${detail.request_status != '취소요청'}"></span>
+					<span class="purchase-qty" th:text="'수량: ' + ${detail.request_complete_qty} + '개'"></span>
 				</div>
 			</div>
 			<div>
