--- a/src/main/resources/templates/mobile/common/fragments/config.html
+++ b/src/main/resources/templates/mobile/common/fragments/config.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="/mobile/common/css/reset.css"/>
 	<link rel="stylesheet" href="/mobile/common/css/common.css"/>
 	<link rel="stylesheet" href="/user/common/css/pagination.css" />
+	<link rel="stylesheet" href="/mobile/common/css/modal.css">
 
 	<!-- 폰트어썸 -->
 	<script src="https://kit.fontawesome.com/302ba19bbe.js" crossorigin="anonymous"></script>
