--- a/src/main/resources/templates/mobile/common/fragments/footer.html
+++ b/src/main/resources/templates/mobile/common/fragments/footer.html
@@ -46,7 +46,7 @@
             </a>
         </li>
         <li class="menu-item">
-            <a href="" class="menu-wrap">
+            <a href="/mobile/admin/myinfo" class="menu-wrap">
                 <div class="icon-wrap">
                     <i class="fa-solid fa-circle-user tab-icon"></i>
                 </div>
