Fix: 사이드메뉴 수정 / Design: 유저페이지 로그인, 아이디찾기/비번찾기 css 수정, 헤더 카테고리 css 수정

--- a/src/main/resources/static/admin/common/css/common.css
+++ b/src/main/resources/static/admin/common/css/common.css
@@ -448,9 +448,17 @@ input[type='number'] {
 	justify-content: center;
 	align-items: center;
 }
+
+.essential {
+	position: relative;
+}
+
 .essential::before {
+	position: absolute;
     content: "*";
     color: red;
+	top: -17px;
+	left: 1px;
 }
 
 /* 테이블 체크 했을 때 배경색 바뀜 */
