--- a/src/main/resources/templates/admin/banners/bannerInsert.html
+++ b/src/main/resources/templates/admin/banners/bannerInsert.html
@@ -20,7 +20,7 @@
 		<div class="header">
 			<h1 class="search-list-title">배너/팝업 등록</h1>
 		</div>
-		<form action="/admin/banners/insert" method="POST" enctype="multipart/form-data" class="content">
+		<form action="/admin/banners/register" method="POST" enctype="multipart/form-data" class="content">
 			<!-- 배너 정보 입력 폼 -->
 			<div class="banner-info">
 				<div class="insert-subject required">제목</div>
