--- a/src/main/resources/templates/admin/banners/banners.html
+++ b/src/main/resources/templates/admin/banners/banners.html
@@ -75,7 +75,7 @@
 			<div id="total-row" class="table-data-cnt-txt"></div>
 			<div class="button-wrap">
 				<button id="delete-button" class="button is-danger delete-button">삭제</button>
-				<button id="insert-button" class="button is-link default-btn" onclick="location.href='/admin/banners/insert'">등록</button>
+				<button id="insert-button" class="button is-link default-btn" onclick="location.href='/admin/banners/register'">등록</button>
 			</div>
 		</div>
 		<table id="banners" class="table" style="width: 100%;">
