--- a/src/main/resources/templates/admin/notice/notice.html
+++ b/src/main/resources/templates/admin/notice/notice.html
@@ -56,7 +56,7 @@
 			<h3 id="total-row" class="table-data-cnt-txt"></h3>
 			<div class="button-wrap-notice">				
 				<button id="delete-button" class="delete-button">삭제</button>
-				<button class="default-btn" onclick="location.href='/admin/notice/noticeReg'">등록</button>
+				<button class="default-btn" onclick="location.href='/admin/notice/register'">등록</button>
 			</div>
 		</div>
 		
