--- a/src/main/resources/static/user/members/css/findId.css
+++ b/src/main/resources/static/user/members/css/findId.css
@@ -1,31 +1,21 @@
-body, html {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center; /* 가로 중앙 정렬 */
-    align-items: center;     /* 세로 중앙 정렬 */
-    font-size: 14px;
-    font-weight: 600;
-}
-
 .mainlogo {
 	display: block;
-	margin-bottom: 100px;
-	margin: 0 auto; /* 가로 중앙 정렬 */
-	margin-bottom: 100px;
-	display: block; /* 이미지를 블록 요소로 변환 */
-    
+	margin: 100px auto; /* 가로 중앙 정렬 */
 }
-button {
-	margin-top: 10px;
+
+.find-container {
+    width: 400px;
+    margin: 0 auto;
 }
 
 .find-category {
     display: flex;
-    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
 }
+
 .findIdBtn-id {
-    border-top-left-radius: 6px;
+    border-top-left-radius: 10px;
     border-right: none; /* 아이디 버튼과 비밀번호 버튼 사이 테두리 제거 */
     color: white !important;
     background-color: #845EC2 !important;
@@ -33,62 +23,63 @@ button {
 }
 
 .findPwBtn-id {
-    border-top-right-radius: 6px;
+    border-top-right-radius: 10px;
     border-left: none; /* 아이디 버튼과 비밀번호 버튼 사이 테두리 제거 */
     border-bottom-color: #845EC2 !important;
     border-left-color: #845EC2 !important;
 }
+
 .find-category input[type="button"] {
-    flex: 1;
+    width: 200px;
     padding: 10px;
-    font-size: 16px;
-    margin-bottom: 20px;
+    font-size: 14px;
     color: #C0C0C0; /* 텍스트 색상 */
     background-color: white; /* 버튼 배경색 */
-    border: 2px solid #C0C0C0; /* 버튼 테두리 추가 */
+    border: 1px solid #C0C0C0; /* 버튼 테두리 추가 */
+    border-bottom-width: 2px;
     cursor: pointer; /* 포인터 모양으로 변경 */
 }
 
 
 .findId-wrap {
+    width: 100%;
     border-radius: 6px;
     border: 1px solid #C0C0C0;
-    padding: 20px;
-    display: inline-block;
-    width: auto;
-    box-sizing: border-box;
+    padding: 20px 29px;
 }
 
-.form-item {
-    display: flex;
-    align-items: center;
-    position: relative;
-    box-sizing: border-box;
-    min-height: 45px;
+form {
+    width: 340px;
+}
+
+.input-box {
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
     padding: 0 10px;
     border: 1px solid #C0C0C0;
-    width: 340px;
-    border-radius: 6px;
-    margin-top: 5px;
-    margin-bottom :5px;
+    border-radius: 10px;
+    line-height: 40px;
+}
+
+.form-item:first-child:not(.email-confirm) {
+    margin-bottom: 30px;
 }
 
 .error {
+    width: 100%;
+    margin: 5px 0 30px;
 	font-size: 12px;
 }
 
-input:not([type="radio"]) {
-    flex: 1 1 auto;
-    box-sizing: border-box;
-    width: 100%;
-    font-size: 14px;
-    line-height: 22px;
-    font-weight: 600;
-    color: #222;
-    border: none;
-}
-
-.error {
-    margin-bottom: 20px;
-}
+/*input:not([type="radio"]) {*/
+/*    flex: 1 1 auto;*/
+/*    box-sizing: border-box;*/
+/*    width: 100%;*/
+/*    font-size: 14px;*/
+/*    line-height: 22px;*/
+/*    font-weight: 600;*/
+/*    color: #222;*/
+/*    border: none;*/
+/*}*/
 
