--- a/src/main/resources/static/user/members/css/findPw.css
+++ b/src/main/resources/static/user/members/css/findPw.css
@@ -1,5 +1,5 @@
 .findPwBtn-pw {
-    border-top-right-radius: 6px;
+    border-top-right-radius: 10px;
     border-right: none; /* 아이디 버튼과 비밀번호 버튼 사이 테두리 제거 */
     color: white !important;
     background-color: #845EC2 !important;
@@ -7,7 +7,7 @@
 }
 
 .findIdBtn-pw {
-    border-top-left-radius: 6px;
+    border-top-left-radius: 10px;
     border-left: none; /* 아이디 버튼과 비밀번호 버튼 사이 테두리 제거 */
     border-bottom-color: #845EC2 !important;
     border-right-color: #845EC2 !important;
@@ -37,10 +37,6 @@
     gap: 10px; /* 요소 사이의 간격 */
 }
 
-.form-item input {
-    margin-right: 10px;
-}
-
 .default-btn.short {
 	width: 130px;
 	border: 1px solid #845EC2;
@@ -48,16 +44,14 @@
 	color: #845EC2;
 	font-size: 14px;
 	display: none;
-	height: 45px;
-	margin-left: 10px;
+	height: 40px;
 	margin-top : 5px;
-	margin-bottom: 5px;
-	
-	
 }
 
 .confirm-container {
 	display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .modal-content {
