Fix: 어드민 사이드메뉴 수정 / 유저페이지 css 수정

--- a/src/main/resources/static/user/common/css/mypage.css
+++ b/src/main/resources/static/user/common/css/mypage.css
@@ -53,9 +53,10 @@
     color: #666;
 }
 
-.sub-menu-list a.on {
-    font-weight: 700;
-    color: #845EC2;
+.sub-menu-list a.on,
+.sub-menu-list a:hover {
+    font-weight: 500;
+    text-decoration: underline;
 }
 
 .myinfo-content {
