--- a/src/main/resources/static/user/common/css/common.css
+++ b/src/main/resources/static/user/common/css/common.css
@@ -260,12 +260,12 @@ input[type='number'] {
     padding: 0 10px;
     font-size: 16px;
     border-radius: 5px;
-    font-weight: 700;
+    font-weight: 600;
     cursor: pointer;
 }
 
 .filter-text-btn.on,
-.filter-text-btn.on p:last-child {
+.filter-text-btn.on p:nth-of-type(2) {
     background-color: #845EC2;
     color: #fff;
 }
@@ -276,7 +276,7 @@ input[type='number'] {
     line-height: 35px;
 }
 
-.filter-text-btn p:last-child {
+.filter-text-btn p:nth-of-type(2) {
     color: #7E7E7E;
     font-weight: 400;
 }
@@ -305,9 +305,8 @@ input[type='number'] {
 
 /* 1:1문의 답변 상태 */
 .reply-state {
-    display: inline-block;
-    padding: 5px;
-    border-radius: 100px;
+    padding: 0 10px;
+    border-radius: 50px;
     background-color: #FAF8FE;
     color: #845EC2;
     font-size: 12px;
@@ -401,3 +400,5 @@ input[type='number'] {
     font-weight: 700;
     z-index: 1;
 }
+
+.hidden {height:100%; min-height:100%; overflow:hidden !important; touch-action:none;}
