--- a/src/main/resources/static/user/mypage/account/css/memberUpdate.css
+++ b/src/main/resources/static/user/mypage/account/css/memberUpdate.css
@@ -17,12 +17,12 @@
 	gap: 20px;
 }		
 .big-font {
-	font-size: 30px;
+	font-size: 24px;
 	font-weight: 700;
-	display: block;
+	/*display: block;*/
 } 
 .middle-font {
-	font-size: 25px;
+	font-size: 20px;
 	font-weight: 700;
 }
 
