--- a/src/main/resources/static/user/mypage/inquiries/css/inquiries.css
+++ b/src/main/resources/static/user/mypage/inquiries/css/inquiries.css
@@ -32,8 +32,7 @@
 
 .inquiry-title {
 	width: 300px;
-	font-size: 16px; 
-	font-weight: 600;
+	font-size: 16px;
  	white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -50,7 +49,7 @@
 
 .btn-spacebetween {
 	margin: 0 10px;
-	color: C0C0C0;
+	color: #C0C0C0;
 }
 
 .inquiry-detail-info {
@@ -63,6 +62,7 @@
 	min-height: 100px;
 	border-radius: 10px;
 	background-color: #FAF8FE;
+	font-size: 15px;
 }
 
 .inquiry-detail-action {
@@ -107,4 +107,15 @@
     width: 100px;
     height: 136px;
     border-radius: 10px;
+}
+
+.reply-wrap {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	font-size: 15px;
+}
+
+.reply-wrap p:last-child {
+	font-size: 13px;
 }
