--- a/src/main/resources/static/user/registration/css/registration.css
+++ b/src/main/resources/static/user/registration/css/registration.css
@@ -1,8 +1,3 @@
-body, html {
-    height: 100%;
-    margin: 0;
-}
-
 .mainlogo {
     margin-bottom: 20px;
 }
@@ -10,7 +5,6 @@ body, html {
 h3 {
     text-align: left;
     width: 100%;
-    margin: 0;
     font-size: 16px;
     padding-bottom: 20px;
     margin-bottom: 20px;
@@ -26,9 +20,8 @@ h3 {
 
 .agreement {
     display: flex;
-    border-top: 1px solid black;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    align-items: center;
+    padding: 20px 25px;
     font-size: 14px;
     text-align: center;
 }
@@ -45,15 +38,15 @@ h3 {
 
 
 .social-whether {
-	margin-bottom: 10px;
     display: flex;
+    align-items: center;
+	margin: 5px 0;
     font-size: 14px;
     text-align: center;
 }
 
-.social-whether div {
-    display: flex;
-    align-items: center; /* 라디오 버튼과 텍스트를 수직 중앙에 배치 */
+.social-whether.naver {
+    margin-bottom: 15px;
 }
 
 .social-whether input[type="radio"] {
@@ -85,7 +78,8 @@ button img {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 230px;
+    border-bottom: 1px solid #666;
+    padding-bottom: 8px;
 }
 
 input.check-box.naver[type=checkbox]:checked + label {
@@ -102,8 +96,6 @@ input.check-box.kakao[type=checkbox]:checked + label {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
-    height: 100vh;
     max-width: 400px;
     padding: 20px;
     margin: 0 auto;
@@ -144,7 +136,6 @@ input:focus {
     align-items: center;
     position: relative;
     box-sizing: border-box;
-    max-width: 100%;
     min-height: 45px;
     padding: 0 10px 0 45px;
     border: 1px solid #C0C0C0;
@@ -153,13 +144,12 @@ input:focus {
     width : 310px;
 }
 
-.form-list , .default-btn.long {
+.form-list {
     display: flex;
     flex-direction: column;       /* 세로로 배치 */
     align-items: center;          /* 가로 중앙 정렬 */
     justify-content: center;
-    width: 100%;                  /* 부모 너비에 맞추기 */
-    max-width: 400px;             /* 최대 너비 설정 */
+    width: 380px;
     margin-bottom: 20px;
     border-radius: 6px;
 }
@@ -287,4 +277,10 @@ input.nomal, .form-item.nomal::before {
 
 .pointer-cursor {
 	cursor: pointer;
+}
+
+.btn-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
