--- a/src/main/resources/templates/user/mypage/member_update/memberUpdate.html
+++ b/src/main/resources/templates/user/mypage/member_update/memberUpdate.html
@@ -22,8 +22,9 @@
 						<span class="middle-font">비밀번호</span>
 						
 						<div class="eye-container">
-							<input type="password" class="input-long" th:name="member_pw" placeholder="비밀번호를 입력하세요.">
-							<i id="eye" class="fa fa-eye fa-lg"></i>
+							<input type="password" class="input-long input-pw" th:name="member_pw" placeholder="비밀번호를 입력하세요.">
+							<i class="fa fa-eye fa-lg"></i>
+							<i class="fa fa-eye-slash fa-lg"></i>
 						</div>
 						
 						<button type="submit" class="default-btn">확인</button>				
