Fix: 푸터약관수정, 회원가입페이지 약관모달 추가 및 css 수정, 마이페이지 탑버튼 추가

--- a/src/main/resources/templates/user/common/layout/myPageLayout.html
+++ b/src/main/resources/templates/user/common/layout/myPageLayout.html
@@ -8,7 +8,6 @@
 <body>
 <header th:insert="~{/user/common/fragments/header :: HeaderFragment}"></header>
 <div class="inner">
-
     <div id="myprofile-wrap">
         <nav class="side-menu">
             <div class="user-profile-wrap">
@@ -49,7 +48,10 @@
         </nav>
         <div id="myinfo-content" layout:fragment="Content"></div>
     </div>
-
+</div>
+<!-- 탑버튼 -->
+<div id="top-btn">
+    <i class="fa-solid fa-arrow-up"></i>
 </div>
 <footer th:insert="~{/user/common/fragments/footer :: FooterFragment}"></footer>
 
