--- a/src/main/resources/static/user/registration/css/registration.css
+++ b/src/main/resources/static/user/registration/css/registration.css
@@ -2,13 +2,11 @@
     margin-bottom: 20px;
 }
 
-h3 {
-    text-align: left;
+h3:not(.terms-title) {
     width: 100%;
-    font-size: 16px;
     padding-bottom: 20px;
     margin-bottom: 20px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #c0c0c0;
 }
 
 #back {
@@ -21,7 +19,7 @@ h3 {
 .agreement {
     display: flex;
     align-items: center;
-    padding: 20px 25px;
+    padding: 20px 50px;
     font-size: 14px;
     text-align: center;
 }
@@ -40,7 +38,9 @@ h3 {
 .social-whether {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 	margin: 5px 0;
+    padding-right: 10px;
     font-size: 14px;
     text-align: center;
 }
@@ -78,7 +78,7 @@ button img {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-bottom: 1px solid #666;
+    border-bottom: 1px solid #c0c0c0;
     padding-bottom: 8px;
 }
 
@@ -92,13 +92,12 @@ input.check-box.kakao[type=checkbox]:checked + label {
 
 
 .join-frame {
+    width: 430px;
+    margin: 80px auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    max-width: 400px;
-    padding: 20px;
-    margin: 0 auto;
 }
 
 
@@ -108,13 +107,17 @@ input:not([type="radio"]) {
     font-size: 16px;
     line-height: 22px;
     color: #222;
-    max-width: 380px;
+    /*max-width: 380px;*/
     border: none;
-    margin-left: 0px;
+    margin-left: 0;
 }
 
 input:focus {
     outline: none;
+}
+
+form {
+    width: 100%;
 }
 
 .default-btn.short:disabled, .default-btn.short {
@@ -132,16 +135,17 @@ input:focus {
 }
 
 .form-item {
-    display: flex;
-    align-items: center;
+    width: 380px;
     position: relative;
-    box-sizing: border-box;
-    min-height: 45px;
+    height: 45px;
     padding: 0 10px 0 45px;
     border: 1px solid #C0C0C0;
-    max-width: 400px;
-    margin-left: 0px;
-    width : 310px;
+    line-height: 45px;
+}
+
+.form-item.email {
+    display: flex;
+    align-items: center;
 }
 
 .form-list {
@@ -149,7 +153,6 @@ input:focus {
     flex-direction: column;       /* 세로로 배치 */
     align-items: center;          /* 가로 중앙 정렬 */
     justify-content: center;
-    width: 380px;
     margin-bottom: 20px;
     border-radius: 6px;
 }
@@ -283,4 +286,73 @@ input.nomal, .form-item.nomal::before {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+/* 약관모달 */
+
+#terms-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.48);
+}
+
+#terms-modal.on {
+    display: block;
+}
+
+.terms-modal-content {
+    width: 400px;
+    height: 500px;
+    margin: 15% auto;
+    background-color: #fff;
+    border: 1px solid #c0c0c0;
+    border-radius: 10px;
+    overflow: auto;
+    padding: 20px;
+}
+
+/* 스크롤바 커스텀 */
+.terms-modal-content::-webkit-scrollbar {
+    width: 8px; /* 스크롤바 너비 */
+}
+.terms-modal-content::-webkit-scrollbar-track { /* 스크롤 바 배경 */
+    height: 10%;
+    background-color: transparent; /*스크롤 바 배경 색상*/
+    border-left: 3px solid transparent;
+    border-right: 3px solid transparent;
+    background-clip: content-box;
+}
+
+.terms-modal-content::-webkit-scrollbar-thumb {  /* 스크롤바 막대 */
+    height: 20%;
+    background-clip: padding-box;
+    border: 2px solid transparent; /*스크롤 바 양옆 여백*/
+    border-radius: 8px;
+    background-color: #666; /*스크롤 바 색상*/
+}
+
+.title-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 50px;
+    font-size: 20px;
+}
+
+.title-wrap > i {
+    font-size: 30px;
+    color: #666;
+    cursor: pointer;
+}
+
+.terms-content p {
+    margin-bottom: 10px;
+}
+
+h4[id*=article] {
+    font-weight: 700;
+    margin: 20px 0;
 }
