--- a/src/main/resources/templates/user/main/footer_policy/terms_policy.html
+++ b/src/main/resources/templates/user/main/footer_policy/terms_policy.html
@@ -40,7 +40,7 @@
 							설정한 가상의 매장을 말하며 아울러 오프라인 매장과 사이버몰을 운영하는 사업자의 의미로도 사용합니다.</li>
 						<li>2. 이용자란 매장에 방문하거나 사이트에 접속하여 이 약관에 따라 회사가 제공하는 정보 및 기타
 							서비스를 제공받는 회원 및 비회원을 말합니다.</li>
-						<li>3. 회원이라 함은 교보북클럽 서비스 혜택적용을 위해 회사에 개인정보를 제공하여 회원등록을 한 자로서,
+						<li>3. 회원이라 함은 웨일북스 서비스 혜택적용을 위해 회사에 개인정보를 제공하여 회원등록을 한 자로서,
 							계속적으로 회사가 제공하는 서비스를 이용할 수 있는 자를 말하며 아래와 같이 구분될 수 있습니다.
 							<ol>
 								<li>① 일반회원 : 상품구매 및 구매와 관련하여 제공되는 서비스를 이용할 수 있는 만 14세 이상의
@@ -49,12 +49,6 @@
 								<li>③ 법인회원 : 사업자 정보로 가입한 회원</li>
 								<li>④ 해외거주회원 : 해외거주 주소로 가입한 회원</li>
 							</ol>
-						</li>
-						<li>4. 교보북클럽 서비스란 당사와 웨일북스 계열사 및 제휴사가 회원에게 제공하는 회원등급 산정, 마일리지
-							및 통합포인트 적립, 사용, 할인, 이벤트 참여 등의 전반적인 고객 서비스 프로그램을 말하며 구체적인 내용은 당사와
-							웨일북스 계열사 또는 제휴사와의 관계 및 당사 정책에 의해 달라질 수 있습니다.</li>
-						<li>5. 웨일북스 계열사란 당사와 교보북클럽 서비스 운영과 관련하여 위탁 운영 계약을 맺고 교보북클럽
-							서비스를 동시 제공하는 회사를 말합니다.<br> * 교보북클럽 서비스 제공사 : 교보라이프플래닛생명보험㈜
 						</li>
 						<li>6. 아이디(ID)라 함은 회원의 식별과 서비스이용을 위하여 회원이 정하고 회사가 승인하는 문자 또는
 							숫자의 조합을 의미합니다.</li>
@@ -189,9 +183,7 @@
 						<li>3. 회원가입은 반드시 실명 또는 본인인증(실명인증)으로 해야 합니다. 실명으로 가입하지 않은 회원에
 							대해 회사는 본인인증(실명인증) 조치를 할 수 있으며, 실명미인증 가입에 따른 서비스 제한에 대한 책임은 회원에게
 							있습니다.</li>
-						<li>4. 교보북클럽 가입 시 이용자의 동의하에 웨일북스 및 웨일북스 계열사의 매장, 온라인 상의 인터넷
-							서비스 회원으로 동시에 가입되며, 통합 아이디 서비스를 이용할 수 있습니다.</li>
-						<li>5. 회사는 제 1 항과 같이 회원으로 가입할 것을 신청한 이용자 중 다음 각호에 해당되지 않는 한
+						<li>4. 회사는 제 1 항과 같이 회원으로 가입할 것을 신청한 이용자 중 다음 각호에 해당되지 않는 한
 							회원으로 등록합니다.
 							<ol>
 								<li>① 가입신청자가 본 약관 제13조 제3항에 의하여 이전에 회원자격을 상실한 적이 있는 경우, 다만
@@ -259,21 +251,7 @@
 						</li>
 					</ol>
 
-					<h4 id="article12">제12조 (회원카드)</h4>
-					<ol>
-						<li>1. 회원으로 등록하신 분께는 웨일북스 북클럽 회원카드를 제공해 드립니다.</li>
-						<li>2. 인터넷 혹은 기타경로로 가입한 회원은 회원카드를 따로 발급하지 않으며, 매장 방문 후 북클럽
-							안내데스크에서 발급신청 및 수령하실 수 있습니다.</li>
-						<li>3. 회원카드는 회사 매장을 방문하여 도서 구매 시 반드시 제시하며, 또는 통신으로 구매 시 반드시
-							회원번호를 통보하여 구매실적이 체크될 수 있도록 해야 합니다. 그렇지 않은 경우에는 회원 실적으로 인정하지
-							아니합니다.</li>
-						<li>4. 회원카드를 분실하였을 경우에는 당사로 즉시 연락을 해야 하며, 신고를 하지 않아 발생하는 불이익은
-							회원 본인에게 책임이 있습니다.</li>
-						<li>5. 회원카드 재발급 수수료는 회사가 정한 기준에 따르며, 각 매장의 북클럽 안내데스크에서 재발급해
-							드립니다.</li>
-					</ol>
-
-					<h4 id="article13">제13조 (회원탈퇴 및 자격 상실)</h4>
+					<h4 id="article13">제12조 (회원탈퇴 및 자격 상실)</h4>
 					<ol>
 						<li>1. 회원은 회사에 언제든지 탈퇴를 요청할 수 있으며 회사는 즉시 회원탈퇴 요청을 처리합니다.<br>
 							다만 재화 등의 거래가 완료되지 아니한 경우에는 거래를 완료하여야 하며 거래를 철회하거나 취소하는 경우에는 그로 인한
@@ -299,26 +277,12 @@
 										<li>- 회사의 이용과정에서 회사의 직원에게 폭언 또는 음란한 언행을 하여 업무환경을 심각히 해하는
 											경우</li>
 										<li>- 회사의 이용과정에서 이유 없는 잦은 연락이나 소란 또는 협박, 인과관계가 입증되지 않는
-											피해에 대한 보상(적립금, 현금, 상품 등) 요구 등으로 업무를 방해하는 경우</li>
+											피해에 대한 보상(현금, 상품 등) 요구 등으로 업무를 방해하는 경우</li>
 										<li>- 회사를 통해 구입한 재화 또는 용역에 특별한 하자가 없는데도 불구하고 일부 사용 후
 											상습적으로 전부 또는 일부를 반품하는 등 업무를 방해하는 경우</li>
 									</ul>
 								</li>
 								<li>⑦ 다른 사람의 회사 이용을 방해하거나 그 정보를 도용하는 등 전자거래질서를 위협하는 경우</li>
-								<li>⑧ 회원이 부정하게 통합포인트(구 마일리지)등을 적립 및 이용하거나, 부정하게 회원정보를 수집 및
-									이용한 경우
-									<ul>
-										<li>- 부정적립 : 회원이 실제로 상품이나 서비스를 구매하지 않았거나, 고의로 회사가 안내한 사항과
-											다르게 서비스 및 결제 방식을 악용한 것이 명백한 경우 등 부정하게 당해 회원에게 통합포인트가 적립된 경우를
-											통칭하여 의미합니다. 그러나 시스템의 오류 등 회원의 귀책사유에 의하지 않고 통합포인트가 적립된 경우나
-											상품이나 서비스를 실제로 구매한 당사자의 동의가 있어 구매 당사자 대신 다른 회원에게 통합포인트를 적립하는
-											경우는 이에 제외됩니다.</li>
-										<li>- 부정 적립된 통합포인트는 회원 자격 상실 통보와 함께 동시 소멸하고 이에 대하여 회원은
-											어떠한 권리도 주장할 수 없습니다. 또한 부정적립 포인트로 상품이나 서비스를 구매하는 등의 부당이득이 발생한
-											경우 회원 당사자 또는 부정적립 동조자가 당사 또는 제휴사에 대한 민·형사상 책임을 지며, 그로 인하여 회사에
-											발생한 모든 손해를 배상하여야 합니다.</li>
-									</ul>
-								</li>
 							</ol>
 						</li>
 						<li>4. 회사가 회원 자격을 제한·정지시킨 후, 동일한 행위를 2회 이상 반복되거나 30일 이내에 그
@@ -330,7 +294,7 @@
 
 					<h3>제3장 주문</h3>
 
-					<h4 id="article14">제14조 (구매신청)</h4>
+					<h4 id="article14">제13조 (구매신청)</h4>
 					<ol>
 						<li>1. 이용자는 회사에서 다음 또는 이와 유사한 방법에 의하여 구매를 신청하며, 회사는 이용자가
 							구매신청을 함에 있어서 다음의 각 내용을 알기 쉽게 제공하여야 합니다.
@@ -353,13 +317,13 @@
 							구매자의 편의증진과 관련된 경우에는 개인정보처리방침을 통해 알림으로써 고지절차와 동의절차를 거치지 않아도 됩니다.</li>
 					</ol>
 
-					<h4 id="article15">제15조 (미성년자 구매계약에 대한 특칙)</h4>
+					<h4 id="article15">제14조 (미성년자 구매계약에 대한 특칙)</h4>
 					<p>만 19세 미만의 미성년 회원이 유료서비스를 이용하거나, 구매계약을 체결할 경우 사전에 부모 등 법정대리인의
 						동의를 얻거나, 사후에 추인을 얻어야 합니다. 다만, 관련 법령에서 달리 정함이 있는 사항은 그에 따릅니다.</p>
 
-					<h4 id="article16">제16조 (계약의 성립)</h4>
+					<h4 id="article16">제15조 (계약의 성립)</h4>
 					<ol>
-						<li>1. 회사는 제14조와 같은 구매신청에 대하여 다음 각호에 해당되지 않는 한 승낙합니다. 다만,
+						<li>1. 회사는 제13조와 같은 구매신청에 대하여 다음 각호에 해당되지 않는 한 승낙합니다. 다만,
 							미성년자와 계약을 체결하는 경우에는 법정대리인의 동의를 얻지 못하면 미성년자 본인 또는 법정대리인이 계약을 취소할 수
 							있다는 내용을 고지합니다.
 							<ol>
@@ -376,30 +340,25 @@
 							취소 등에 관한 정보 등을 포함하여야 합니다.</li>
 					</ol>
 
-					<h4 id="article17">제17조 (지급방법)</h4>
+					<h4 id="article17">제16조 (지급방법)</h4>
 					<ol>
 						<li>1. 회사에서 구매한 재화 또는 용역에 대한 대금지급방법은 다음 각 호의 방법 중 가용한 방법으로 할
 							수 있습니다. 단, 회사에서 현재 서비스 중인 것에 한합니다.
 							<ol>
-								<li>① 폰뱅킹, 인터넷뱅킹, 메일 뱅킹 등의 각종 계좌이체</li>
-								<li>② 선불카드, 직불카드, 신용카드 등의 각종 카드결제</li>
-								<li>③ 온라인무통장입금</li>
-								<li>④ 전자화폐에 의한 결재</li>
-								<li>⑤ 통합포인트와 예치금에 의한 결제</li>
-								<li>⑥ 회사와 계약을 맺었거나 회사가 인정한 상품권에 의한 결제</li>
-								<li>⑦ 기타 회사에서 정하는 통상적인 방법의 대금결제 등</li>
+								<li>① 신용카드 등의 각종 카드결제</li>
+								<li>② 기타 회사에서 정하는 통상적인 방법의 대금결제 등</li>
 							</ol>
 						</li>
 					</ol>
 
-					<h4 id="article18">제18조 (수신확인통지 · 구매신청 변경 및 취소)</h4>
+					<h4 id="article18">제17조 (수신확인통지 · 구매신청 변경 및 취소)</h4>
 					<ol>
 						<li>1. 회사는 이용자의 구매신청이 있는 경우 이용자에게 수신확인통지를 합니다.</li>
 						<li>2. 수신확인통지를 받은 이용자는 의사표시의 불일치 등이 있는 경우에는 수신확인통지를 받은 후 즉시
 							구매신청 변경 및 취소를 요청할 수 있고, 회사는 배송 전 이용자의 구매신청 변경 및 취소 요청이 있는 때에는
 							지체없이 그 요청에 따라 처리하여야 합니다. 다만, 이미 대금을 지불한 경우에는 제21조 청약철회 등의 효과에 관한
 							규정에 따릅니다.</li>
-						<li>3. 회사는 이용자가 구매(주문) 신청 후 제 17 조에 의한 지급방법으로 그 신청일로부터 7 일 이내
+						<li>3. 회사는 이용자가 구매(주문) 신청 후 제 16 조에 의한 지급방법으로 그 신청일로부터 7 일 이내
 							상품대금에 대해 입금이 확인되지 않을 경우 회사는 별도 의사 표시 없이 구매계약을 해제하는 것으로 처리할 수
 							있습니다.</li>
 						<li>4. 매장 주문예약의 경우 예약접수 7일 이후까지 미 수령 도서는 구매계약을 취소 처리할 수 있습니다.</li>
@@ -408,7 +367,7 @@
 
 					<h3>제4장 배송·취소·환불 및 교환</h3>
 
-					<h4 id="article19">제19조 (배송)</h4>
+					<h4 id="article19">제18조 (배송)</h4>
 					<ol>
 						<li>1. 회사는 이용자가 구매한 재화에 대해 배송수단, 수단별 배송비용 부담자, 수단별 배송기간 등을
 							명시합니다. 만약 회사의 고의·과실로 약정 배송기간을 초과한 경우에는 그로 인한 이용자의 손해를 배상하여야 합니다.
@@ -417,7 +376,7 @@
 							배송소요기간에서 제외합니다.</li>
 					</ol>
 
-					<h4 id="article20">제20조 (반품, 교환, 환불, 취소)</h4>
+					<h4 id="article20">제19조 (반품, 교환, 환불, 취소)</h4>
 					<ol>
 						<li>1. 이용자는 『전자상거래 등에서의 소비자보호에 관한 법률』 제17조에 따라 상품을 배송받은 날로부터
 							7일 이내에 반품 또는 교환을 요청할 수 있습니다. 다만, 청약철회에 관하여 『전자상거래 등에서의 소비자보호에 관한
@@ -491,7 +450,7 @@
 							경우 또는 청약일로부터 7일이 지난 이후에는 본 조 제7항에 해당하지 않는 사유로 반품 및 환불이 불가합니다.</li>
 					</ol>
 
-					<h4 id="article21">제21조 (청약철회 등의 효과)</h4>
+					<h4 id="article21">제20조 (청약철회 등의 효과)</h4>
 					<ol>
 						<li>1. 회사는 이용자로부터 재화 등을 반환받은 경우 3영업일 이내에 이미 지급받은 재화 등의 대금을
 							환급합니다. 이 경우 회사가 이용자에게 재화 등의 환급을 지연한 때에는 그 지연기간에 대하여 『전자상거래 등에서의
@@ -507,57 +466,9 @@
 					</ol>
 
 
-					<h3>제5장 디지털 상품 서비스</h3>
+					<h3>제5장 정보의 처리</h3>
 
-					<h4 id="article22">제22조 (eBook 서비스)</h4>
-					<ol>
-						<li>1. eBook은 인터넷을 통해 서비스를 제공합니다.</li>
-						<li>2. 회사가 제공하는 eBook 뷰어 소프트웨어를 설치하여야 이용할 수 있습니다.</li>
-						<li>3. 콘텐츠는 회사가 콘텐츠 제공자로부터 사용권한을 부여 받은 것으로 콘텐츠 제공자 또는 원 권리자에
-							모든 권리가 귀속되며 저작권 법령 또는 관련 지적 재산권 법률 및 조약에 의해 보호됩니다.</li>
-						<li>4. 콘텐츠 제공자의 요구에 의해 일부 eBook은 해외 지역에서 구매가 제한될 수 있습니다.</li>
-						<li>5. 회원은 콘텐츠를 구매하기 전에 구매하려는 상품의 상세 내용과 조건을 정확하게 확인해야 합니다.
-							구매하려는 상품의 내용과 거래 조건을 확인하지 않고 구매하여 발생한 모든 손해의 책임은 회원 본인에게 있습니다.</li>
-						<li>6. eBook 은 구매 후 승인된 회원 아이디로만 이용이 가능하고, 타 아이디로 사용권한을 양도하실
-							수 없습니다.</li>
-						<li>7. eBook 상품은 구매 후 다운로드 받거나 한번이라도 읽었을 경우, 이미 콘텐츠를 이용한 것으로
-							간주하고 주문 취소가 불가능합니다. 단, 아래의 경우에 대해서는 주문 취소 및 환불이 가능합니다.
-							<ol>
-								<li>① eBook 및 서비스를 구매하였음에도 사용자 환경으로 이용이 불가하다고 판단할 경우</li>
-								<li>② eBook 서비스 중 디지털 콘텐츠를 다운로드 받지 않거나 스트리밍 서비스를 통해 열람하지 않은
-									경우 (결제일로부터 7일 이내에 취소를 요청하면 결제금액 전액을 환불 받을 수 있으며, 대여 및 정액서비스의
-									경우는 결제일로부터 7일이 지난 후 이용기한 내에 취소를 요청하면 결제금액의 90%에 해당하는 금액을 환불 받을
-									수 있음)</li>
-								<li>③ 회사의 귀책사유로 인해 회원이 이용기간 동안 서비스를 제공받을 수 없게 되는 경우, 회사는
-									회원에게 그 기간만큼 동일, 유사한 콘텐츠를 제공합니다.</li>
-							</ol>
-						</li>
-						<li>8. 회사는 다음 각호에 해당하는 경우를 부정 이용행위로 봅니다.
-							<ol>
-								<li>① 동일한 아이디로 5 대 이상의 기기(PC, 스마트폰, 태블릿 PC, 전용 단말기 등)에서 동시
-									접속하여 서비스를 이용하는 경우</li>
-								<li>② 자신의 아이디 및 전자책, 이용권, 쿠폰, e 캐시 등을 타인에게 판매, 대여, 양도하는 행위
-									및 이를 광고하는 경우</li>
-								<li>③ eBook 이용 시 상품 전부 혹은 일부를 복사, 복제 혹은 녹화하고 이를 배포하는 경우</li>
-								<li>④ eBook 저작권을 보호하기 위해 적용된 DRM을 무력화하는 경우</li>
-								<li>⑤ 상품을 불법적으로 다운로드 받거나 이를 타인에게 제공하는 경우</li>
-							</ol>
-						</li>
-						<li>9. 회사는 전항에 따른 부정 회원을 발견할 경우, 다음 각 호에 다른 조치를 취할 수 있습니다.
-							<ol>
-								<li>① 전자우편, SMS 등 전자통신을 통해 부정이용을 알리고, 해당 아이디에 대한 서비스 이용을
-									정지시킬 수 있으며, 부정 취득 및 사용된 콘텐츠 및 결제수단은 회수 조치 및 배상을 요구할 수 있습니다.</li>
-								<li>② 부정사용이 재차 발견될 경우 회사는 위반 내용 고지와 함께 필요시 법적인 대응을 할 수
-									있습니다. 회사는 회원에게 30일 간의 소명기간을 부여하고, 소명기간 동안 정당한 사유를 제시하지 못할 경우,
-									회원등록을 말소하고 구입한 콘텐츠 및 권한을 종료할 수 있습니다.</li>
-							</ol>
-						</li>
-					</ol>
-
-
-					<h3>제6장 정보의 처리</h3>
-
-					<h4 id="article23">제23조 (개인정보보호 및 이용)</h4>
+					<h4 id="article23">제21조 (개인정보보호 및 이용)</h4>
 					<ol>
 						<li>1. 회사는 『정보통신망 이용촉진 및 정보보호 등에 관한 법률』, 『개인정보 보호법』 등 관계 법령이
 							정하는 바에 따라 이용자의 개인정보를 보호하기 위해 노력합니다.</li>
@@ -567,9 +478,9 @@
 					</ol>
 
 
-					<h3>제7장 게시물과 커뮤니티</h3>
+					<h3>제6장 게시물과 커뮤니티</h3>
 
-					<h4 id="article24">제24조 (저작권 귀속 및 이용제한)</h4>
+					<h4 id="article24">제22조 (저작권 귀속 및 이용제한)</h4>
 					<ol>
 						<li>1. 회사가 창작 작성한 저작물에 대한 저작권 및 기타 지적 재산권은 회사에 귀속하며 이용자는 회사의
 							동의 없이 무단으로 사용할 수 없습니다.</li>
@@ -581,7 +492,7 @@
 							: 전자상거래 표준약관 / 공정거래위원회 2015.6.26)</li>
 					</ol>
 
-					<h4 id="article25">제25조 (이용자의 게시물)</h4>
+					<h4 id="article25">제23조 (이용자의 게시물)</h4>
 					<ol>
 						<li>1. 이용자가 사이버몰에 등록 또는 게시한 게시물에 대한 모든 책임은 이용자에게 있으며, 회사는
 							이용자의 게시물이 다음 각 항에 해당한다고 판단되는 경우에 사전통지 없이 삭제할 수 있고, 이에 대하여 회사는 어떠한
@@ -606,7 +517,7 @@
 						</li>
 					</ol>
 
-					<h4 id="article26">제26조 (게시물의 관리)</h4>
+					<h4 id="article26">제24조 (게시물의 관리)</h4>
 					<ol>
 						<li>1. 이용자의 게시물이 『정보통신망 이용촉진 및 정보보호 등에 관한 법률』, 『개인정보 보호법』 및
 							『저작권법』등 관련 법령에 위반되는 내용을 포함하는 경우, 권리자는 관련 법령이 정한 절차에 따라 해당 게시물의
@@ -622,9 +533,9 @@
 					</ol>
 
 
-					<h3>제8장 기타</h3>
+					<h3>제7장 기타</h3>
 
-					<h4 id="article27">제27조 (연결 "몰"과 피연결 "몰" 간의 관계)</h4>
+					<h4 id="article27">제25조 (연결 "몰"과 피연결 "몰" 간의 관계)</h4>
 					<ol>
 						<li>1. 상위 “몰”과 하위 “몰”이 하이퍼 링크(예 : 하이퍼 링크의 대상에는 문자, 그림 및 동화상
 							등이 포함됨)방식 등으로 연결된 경우, 전자를 연결 몰(웹사이트)이라고 하고 후자를 피연결 몰(웹사이트)이라고
@@ -634,7 +545,7 @@
 							보증책임을 지지 않습니다.</li>
 					</ol>
 
-					<h4 id="article28">제28조 (규약 위반시 책임)</h4>
+					<h4 id="article28">제26조 (규약 위반시 책임)</h4>
 					<ol>
 						<li>1. 회사와 이용자가 이 규약을 위반함으로써 발생한 모든 책임은 위반한 자가 부담하며, 이로 인해
 							상대방에게 손해를 입힌 경우에는 손해를 입힌 자가 배상하여야 합니다.</li>
@@ -642,7 +553,7 @@
 							법원으로 합니다.</li>
 					</ol>
 
-					<h4 id="article29">제29조 (면책)</h4>
+					<h4 id="article29">제27조 (면책)</h4>
 					<ol>
 						<li>1. 회사는 천재지변, 불가항력 기타 회사의 합리적인 통제범위를 벗어난 사유로 인하여 서비스를 제공할
 							수 없는 경우에는 그에 대한 책임을 부담하지 않습니다.</li>
@@ -657,7 +568,7 @@
 							손해에 대하여는 아무런 책임을 부담하지 않습니다.</li>
 					</ol>
 
-					<h4 id="article30">제30조 (광고게재 등)</h4>
+					<h4 id="article30">제28조 (광고게재 등)</h4>
 					<ol>
 						<li>1. 회사는 이용자에게 최상의 서비스를 원활하게 제공하기 위한 재정기반을 마련하기 위하여 상업용 광고를
 							화면에 게재하거나 이메일 또는 MMS, DM(서신) 등을 이용하여 개별 이용자에게 보낼 수 있습니다.<br>
@@ -668,7 +579,7 @@
 							아무런 책임을 부담하지 않습니다.</li>
 					</ol>
 
-					<h4 id="article31">제31조 (분쟁해결)</h4>
+					<h4 id="article31">제29조 (분쟁해결)</h4>
 					<ol>
 						<li>1. 회사는 이용자가 제기하는 정당한 의견이나 불만을 반영하고 그 피해를 보상처리하기 위하여
 							피해보상처리기구(고객만족팀)를 설치 운영합니다.</li>
@@ -678,7 +589,7 @@
 							공정거래위원회 또는 시·도지사가 의뢰하는 분쟁조정기관의 조정에 따를 수 있습니다.</li>
 					</ol>
 
-					<h4 id="article32">제32조 (재판권 및 준거법)</h4>
+					<h4 id="article32">제30조 (재판권 및 준거법)</h4>
 					<ol>
 						<li>1. 회사와 이용자간에 발생한 전자상거래 분쟁에 관한 소송은 제소 당시의 이용자의 주소에 의하고,
 							주소가 없는 경우에는 거소를 관할하는 지방 법원의 전속 관할로 합니다. 다만, 제소 당시 이용자의 주소 또는 거소가
@@ -686,51 +597,12 @@
 						<li>2. 회사와 이용자간의 서비스 이용계약, 회원 상호 간의 물품거래에는 대한민국 법령이 적용됩니다.</li>
 					</ol>
 
-					<h4 id="article33">제33조 (법령 및 준용)</h4>
+					<h4 id="article33">제31조 (법령 및 준용)</h4>
 					<p>본 약관에 명시하지 않은 사항은 관련 법령과 회사의 규정 및 기타 상관례에 따릅니다.</p>
 
 
-					<h3>제9장 특별규정</h3>
-
-					<h4 id="article34">제34조 (통합포인트의 사용 계약)</h4>
-					<p>통합포인트(구. 마일리지) 사용 계약은 본 약관에 사용 신청자가 동의한다는 의사표시를 함으로써 성립합니다.</p>
-
-					<h4 id="article35">제35조 (통합포인트의 취득 및 소멸)</h4>
-					<ol>
-						<li>1. 통합포인트란 회사 및 회사의 계열사에서 상품을 구매할 경우 각 상품별로 설정되어 누적되는
-							점수로써, 회사가 교보북클럽 회원에게 제공하는 회원보상체계의 일종으로 구매 시 현금처럼 사용할 수 있는
-							화폐개념입니다. 단, 현금으로 환불되지 않습니다</li>
-						<li>2. 회사의 회원이 웨일북스 및 웨일북스 계열사의 상품을 구매할 경우 각 상품별로 해당 적립률에 따른
-							일정금액을 통합포인트로 적립해 드립니다.</li>
-						<li>3. 온라인 구매 시 통합포인트는 구매하신 상품의 발송이 완료된 시점에 자동 적립됩니다.</li>
-						<li>4. 통합포인트는 웨일북스 및 웨일북스 계열사에서 온라인과 오프라인 구매 시 통합 관리됩니다.</li>
-						<li>5. 회원탈퇴 또는 회원자격 상실 시 잔액 여부와 상관없이 회원의 통합포인트는 소멸되며 타인에게 양도할
-							수 없습니다.</li>
-						<li>6. 통합포인트는 1년간 유효하며, 1년이 경과된 통합포인트는 순차적으로 소멸됩니다.</li>
-						<li>7. 통합포인트 결제분에 대해서는 통합포인트가 적립되지 않습니다.</li>
-						<li>8. 회사의 운영정책에 따라 상품별 통합포인트 부여 그리고 통합포인트 사용가능시점 및 분할사용가능
-							여부가 다를 수 있습니다.</li>
-						<li>9. 회원이 이 약관에서 정한 의무를 위반하여 통합포인트를 부당하게 취득한 것이 확인된 경우 회사는
-							회원에 대한 사전 통보 후 통합포인트를 삭제할 수 있습니다. 이 경우 회사는 취득 경위 등을 회원에게 소명 요청할 수
-							있고, 사전 통보 후 확인 완료 시까지 통합포인트 사용을 임시로 중지할 수 있습니다. 다만, 회원이 현행법 위반 및
-							고의 중대한 과실로 회사에 손해를 입힌 경우에는 사전 통보 없이 이용계약을 해지할 수 있습니다.</li>
-						<li>10. 회원이 보유한 통합포인트보다 사용한 통합포인트가 많아서 마이너스 통합포인트가 발생한 경우,
-							회원은 회사에 마이너스 통합포인트를 해소시켜야 할 채무가 있고 회사는 회원에게 마이너스 통합포인트 해소를 요청할
-							채권이 있습니다.</li>
-					</ol>
-
-					<h4 id="article36">제36조 (예치금)</h4>
-					<ol>
-						<li>1. 예치금이란 결제대금 환불, 중고장터 상품판매 정산, 초과 입금차액 환불 등으로 발생한 것으로
-							상품구매와 계좌환불이 가능한 현금성 금액으로, 회원이 직접 환불 접수할 때까지 해당금액은 임시로 보관됩니다.</li>
-						<li>2. 회원(본인)의 요청에 따라 전부 또는 일부를 은행계좌로 입출금 할 수 있으며, 예치기간은 부여하지
-							않고 회원탈퇴(계약해지) 시 소멸됩니다.</li>
-						<li>3. 결제수단에 따라 승인취소가 가능한 결제수단은 승인취소가 우선적으로 처리됩니다.</li>
-						<li>4. 휴대폰이나 신용카드 등을 이용한 결제의 경우에는 입금 확인에 일정 기간이 소요되기 때문에 환불
-							처리가 다소 지연될 수도 있습니다.</li>
-					</ol>
-
-					<h4 id="article37">제37조 (개별 약관)</h4>
+					<h3>제8장 특별규정</h3>
+					<h4 id="article37">제32조 (개별 약관)</h4>
 					<ol>
 						<li>1. 이 약관은 회사와 회원간에 성립되는 서비스 이용계약의 기본 약정입니다. 회사는 필요한 경우 특정
 							서비스에 관하여 적용될 사항(이하 개별약관이라고 합니다)을 정하여 미리 공지할 수 있습니다. 회원이 이러한 개별약관에
@@ -740,7 +612,7 @@
 					</ol>
 
 					<h4>부칙</h4>
-					<p>본 이용약관은 2024년 4월 15일부터 시행하며 종전의 약관내용은 본 약관으로 대체합니다.</p>
+					<p>본 이용약관은 2024년 9월 29일부터 시행하며 종전의 약관내용은 본 약관으로 대체합니다.</p>
 				</div>
 			</div>
 		</div>
