Fix: 주문내역 요청/취소 건 수정

--- a/src/main/resources/static/user/mypage/orderList/css/orderList.css
+++ b/src/main/resources/static/user/mypage/orderList/css/orderList.css
@@ -132,7 +132,7 @@
 }
 
 .book-name {
-    max-width: 156px;
+	max-width: 156px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -162,4 +162,10 @@
 
 .result-wrap {
 	border: none;
+}
+
+.order-status span{
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
 }
