Feat : 모바일 배송상황 리스트 기능 구현 Refactor : 사용자 리뷰 작성 코드 수정

--- a/src/main/resources/templates/admin/common/fragments/header.html
+++ b/src/main/resources/templates/admin/common/fragments/header.html
@@ -12,8 +12,7 @@
 	<div class="user-wrap">
 		<div class="user-profile">
 			<div class="profile-img-wrap">
-				<img th:src="@{/images/profiles/{profile}(profile=${session.manager.manager_profile_changed != null ? session.manager.manager_profile_changed : 'default_profile.png'})}" alt="프로필이미지" class="profile-img" 
-					onerror="this.onerror=null; this.src='/admin/common/img/profile/default_profile.png';">
+				<img th:src="@{/images/profiles/{profile}(profile=${session.manager.manager_profile_changed != null ? session.manager.manager_profile_changed : 'default_profile.png'})}" alt="프로필이미지" class="profile-img" onerror="this.onerror=null; this.src='/admin/common/img/profile/default_profile.png';">
 			</div>
 			<div class="text-wrap">
 				<th:block th:switch="${session.manager.manager_dept}">
