--- a/src/main/resources/templates/mobile/common/fragments/footer.html
+++ b/src/main/resources/templates/mobile/common/fragments/footer.html
@@ -38,7 +38,7 @@
             </a>
         </li>
         <li class="menu-item">
-            <a href="" class="menu-wrap">
+            <a href="/mobile/admin/delivery-status" class="menu-wrap">
                 <span class="icon-wrap">
                 <i class="fa-solid fa-truck-fast tab-icon"></i>
                 </span>
