Feat: 작성 내용 제한 공통 기능 추가

--- a/src/main/resources/static/admin/common/css/common.css
+++ b/src/main/resources/static/admin/common/css/common.css
@@ -528,3 +528,10 @@ table td:not([align]), table th:not([align]) {
 .dt-empty {
     text-align: center !important;
 }
+
+.content-length-area {
+	display: flex;
+	gap: 3px;
+	justify-content: flex-end;
+	margin: -10px 10px 0 0;
+}
